adaptive new page 1440. clear js code. add favicon

--- a/src/DEFIYield.html
+++ b/src/DEFIYield.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ui/ux designer</title>
+    <title>UI/UX Designer</title>
     <meta name="title" content="Заголовок">
     <meta name="description" content="Онисание">
     <!-- Open Graph / Facebook -->
@@ -20,6 +20,17 @@
     <meta property="twitter:description" content="Онисание">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <!-- Favicon  -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <!-- <link rel="stylesheet" href="css/mobile.css" media="(max-width: 992px)""> -->
@@ -175,8 +186,8 @@
         </div>
 
         <div class="defi-images">
-          <div class="defi-image"><img src="img/defi-2.png" alt=""></div>
-          <div class="defi-image"><img src="img/defi-2.png" alt=""></div>
+          <div class="defi-images-image"><img src="img/defi-2.png" alt=""></div>
+          <div class="defi-images-image"><img src="img/defi-2.png" alt=""></div>
         </div>
 
         <div class="defi-text">
@@ -313,12 +324,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- JQ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Scroll Smooth -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
 
     <!-- My js code -->
-    <!-- <script src="js/cusror.js"></script> -->
-    <script src="js/scroll.js"></script>
     <!-- <script src="js/script.js"></script> -->
     <script src="js/defi-script.js"></script>
 </body>
